<resources>
    <string name="app_name">Game On</string>

    <string name="check_in_out_button">Check In / Check Out Equipment</string>
    <string name="request_equipment_button">Request Equipment</string>
    <string name="damage_report_button">Equipment Damage Report</string>
    <string name="options_button">Files and Options</string>

    <string name="check_in">Check-in</string>
    <string name="check_out">Check-out</string>
    <string name="default_text_input">Input Text Here</string>
    <string name="requester">Requester:\t</string>
    <string name="id_title">Item ID: </string>
    <string name="scan">Scan Barcode</string>

    <string name="take_pic">Take a Picture</string>
    <string name="reporter">Reporter:</string>
    <string name="description">Description / Additional Information</string>
    <string name="submit">Submit Report</string>

    <string name="item">Item:\t\t\t\t</string>
    <string name="num">Quantity:\t\t</string>
    <string name="loc">Location:\t\t</string>
    <string name="spec">Special \nRequests:\t</string>
    <string name="submitRequest">Submit Request</string>
</resources>
