<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chrsrck.gameon.DamageActivity"
    android:background="#000000">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="#FFFFFF"
                android:text="@string/damage_report_button"
                android:textAlignment="center"
                android:textSize="24sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#FFFFFF"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow>
                    <ImageView
                        android:id="@+id/pictureFiles"
                        android:layout_width="80dp"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="20dp"/>
                    <Button
                        android:id="@+id/takePictureButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:textColor="#FFFFFF"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:textAllCaps="false"
                        android:background="@drawable/button_border"
                        android:text="@string/take_pic" />
                </TableRow>
            </TableLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#FFFFFF"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView
                        android:id="@+id/inputReporterTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:text="@string/reporter"
                        android:textColor="#FFFFFF" />

                    <EditText
                        android:id="@+id/inputReporterTextField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="6"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="@android:drawable/editbox_background"/>
                </TableRow>
                <TableRow>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_weight="7"
                        android:background="#FFFFFF"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:id="@+id/inputSerialTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/id_title"
                        android:layout_marginTop="20dp"
                        android:textColor="#FFFFFF" />

                    <EditText
                        android:id="@+id/inputSerialTextField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="6"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="@android:drawable/editbox_background"/>
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/scanCode"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                android:textAllCaps="false"
                android:background="@drawable/button_border"
                android:layout_marginBottom="20dp"
                android:text="@string/scan" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#FFFFFF"/>

            <TextView
                android:id="@+id/descriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:text="@string/description"
                android:textColor="#FFFFFF"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>
                    <EditText
                        android:id="@+id/descriptionTextField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@android:drawable/editbox_background"
                        android:fadeScrollbars="false"
                        android:gravity="top|start"
                        android:inputType="textMultiLine"
                        android:isScrollContainer="false"
                        android:scrollHorizontally="false"
                        android:scrollbars="none" />

                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/submitReport"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/submit"
                android:textColor="#FFFFFF"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:background="@drawable/button_border" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
